# rethla-extract

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  auth.py  cli.py  db.py  main.py  models.py
backend/app/api/routes/: __init__.py  admin.py  auth.py  jobs.py  output.py  pick_folder.py  usage.py
backend/app/scripts/: __init__.py  create_admin.py
backend/app/transcription/: __init__.py  checkpoint.py  constants.py  emit.py  io.py  pipeline.py  timings_log.py
backend/tests/: test_checkpoint.py  test_emit.py  test_io.py  test_timings_log.py
docs/: PRD.md  auth-strategy-analysis.md  competitive-analysis.md  competitive-summary.md  phase-3-auth-design.md
frontend/: README.md  index.html
frontend/src/: App.css  App.tsx  index.css
