[project]
name = "transcript-backend"
version = "0.1.0"
description = "Transcript App API (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.2.2",
    "typer>=0.24.1",
    "uvicorn[standard]>=0.32.0",
    "whisperx>=3.8.4",
    "sqlalchemy>=2.0.48",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
]

[project.scripts]
transcript = "app.cli:cli_app"
create-admin = "app.scripts.create_admin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
